# typst-gramar-lsp

./: .gitignore  555_timer  Cargo.toml  README.md  cat  config.json  kudu  startLsp.lua  t.py  tmp
src/: config.rs  language_tool.rs  language_tool_old.rs  main.rs  parse.rs  semantic_token.rs  typst_parse.rs  word_query.rs
src/components/: mod.rs
src/components/language_tool/: check_text.rs  mod.rs
test/test_typst_parse/: Cargo.toml
test/test_typst_parse/src/: main.rs
