[package]
name = "test_typst_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substring = "1.4.5"
tower-lsp = { version = "0.20.0", features = ["proposed"]}
typst-syntax = { git = "https://github.com/typst/typst.git" }
